--- a/temas.css
+++ b/temas.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 1400px;
     background-color: paleturquoise;
+    font-size: 80px;
 }
 .encabezado{
     width: 100%;
@@ -11,21 +12,22 @@
 
 }
 .menu{
-width: 100%;
-height: 80px;
-background-color: seashell;
+    width: 100%;
+    height: 80px;
+    background-color: seashell;
+    display: flex;
 }
 .contenedor2{
     width: 100%;
     height: 1200px;
     background-color: violet;
-display:flex;
+    display:flex;
 }
 .izquierda{
     width: 20%;
     height: 1200px;
     background-color: thistle;
-    
+    font-size: 35px;
 }
 .centro{
     width: 60%;
@@ -37,4 +39,24 @@ display:flex;
     height: 1200px;
     background-color: mediumorchid;
 }
-
+.tecnologia{
+    width: 100px;
+    height: 78px;
+    background-color: gray;
+    margin: 2px;
+    font-size: 19px;
+}
+.matematicas{
+    width: 100px;
+    height: 78px;
+    background-color: gray;
+    margin: 2px;
+    font-size: 19px;
+}
+.biologia{
+    width: 100px;
+    height: 78px;
+    background-color: gray;
+    margin: 2px;
+    font-size: 19px;
+}
